[package]
name = "macro_parser_combinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_parser_combinator_core = { path="macro_parser_combinator_core" }
macro_parser_combinator_macro = { path="macro_parser_combinator_macro" }
# quote = "1"
# syn = { version = "1.0.56", features = ["full"] }
regex = "1"
